# AEROX_contact_approach

./: CMakeLists.txt  InterestingLinks.txt  README.md
FeatureDescription/: CMakeLists.txt
FeatureDescription/include/: FeatureMatching.h  RealSenseCamera.h
FeatureDescription/src/: FeatureMatching.cpp  RealSenseCamera.cpp
OpticalFlow/: CMakeLists.txt
OpticalFlow/include/: FarnebackMethod.h  LucasMethod.h
OpticalFlow/src/: FarnebackMethod.cpp  LucasMethod.cpp
TemplateMatching/: CMakeLists.txt
TemplateMatching/src/: RealSenseCamera.cpp  TemplateMatching.cpp  main.cpp
TestTemplateMatching/: CMakeLists.txt
TestTemplateMatching/src/: cam_match.cpp  cam_match_resize.cpp  imshow_test.cpp
VisionProject/: CMakeLists.txt
VisionProject/app/: CMakeLists.txt  mainApproachPCL.cpp  mainFanerback.cpp  mainFeatureDescript.cpp  mainLucas.cpp  mainPose.cpp  mainTemplMatch.cpp  mainTemplMatchThread.cpp
VisionProject/include/: FarnebackMethod.h  LucasMethod.h  PCLUse.h  RealSenseCamera.h  TemplateMatchThread.h  TemplateMatching.h
VisionProject/src/: FarnebackMethod.cpp  FeatureMatching.cpp  LucasMethod.cpp  PCLUse.cpp  RealSenseCamera.cpp  TemplateMatchThread.cpp  TemplateMatchingThread.cpp  rsPose.cpp
src/: cam_match.cpp  cam_match_resize.cpp  image_try.cpp
